fix the vertical alignment of icons

--- a/crate_project/static/less/crate.less
+++ b/crate_project/static/less/crate.less
@@ -34,6 +34,10 @@ html, body {
   height: 100%;
 }
 
+[class^="icon-"], [class*=" icon-"] {
+  margin-top: 2px;
+ }
+
 #body-inner {
   min-height: 100%;
   height: auto !important;
